Properly running inside a docker

--- a/optcbx/templates/index.html
+++ b/optcbx/templates/index.html
@@ -6,6 +6,11 @@
 
 <h1 class="display-4">OPTC Box Exporter (OPTCbx)</h1>
 
+<p>
+  This web application aims to showcase the potential of OPTC Box exporter (OPTCbx). Here
+  you will find a short description of what OPTCbx is and also, you will be able to try it.
+</p>
+
 {% include 'intro.html' %}
 
 {% include 'demo.html' %}
