Fixing issues before smart release

--- a/optcbx/templates/disclaimer.html
+++ b/optcbx/templates/disclaimer.html
@@ -16,12 +16,10 @@
 
 <ul>
   <li>
-    OPTCbx works with hand crafted methods which may make the application a bit unstable.
-    I am planning to use *Deep Learning* Object Detection approaches to improve the whole pipeline.
-  </li>
-
-  <li>
-    By now, OPTCbx only works with character box screenshots. In a near future it should work
-    with Pirate Festival (AKA Pirate Rumble) and *normal* game teams.
+    OPTCbx Supports all screens in game where characters appear. But only expect good results with character box.
+    OPTCbx is based on Deep learning techniques, meaning that the accuracy of the application is highly related
+    to the data used to train the artificial intelligence. Sadly I do not have many training images out of character box.
+    I periodically train the OPTCbx object detection model so, as time goes on the application will improve in the different 
+    screens.
   </li>
 </ul>
